switch to mongodb

--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -15,7 +15,7 @@ block content
                         h2.product__price #{product.price}
                         p.product__description #{product.description}
                     .card__actions 
-                        a(href=`/admin/edit-product/${product.id}?edit=true`).btn Edit 
+                        a(href=`/admin/edit-product/${product._id}?edit=true`).btn Edit 
                         form(action="/admin/delete-product",method="POST")
                             input(type="hidden",value=product.id,name="productId") 
                             button(type="submit").btn Delete   
