--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -5,10 +5,14 @@ block content
             ul 
                 each product of products 
                     li 
-                        p #{product.productData.title} (#{product.quantity})
+                        p #{product.title} (#{product.cart_item.quantity})
                         form(action="/cart-delete-item",method="POST")
-                            input(type="hidden",value=product.productData.id,name="productId")
+                            input(type="hidden",value=product.id,name="productId")
                             button(type="submit").btn delete  
+            hr
+            div.centered
+                form(action="/create-order", method="POST")
+                    button(type="submit").btn Order Now! 
                          
         else 
             h1 No products found
