--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -1,1 +1,13 @@
 extends ../layouts/main-layout.pug
+block content 
+    main 
+        if orders.length > 0
+            ul 
+                each order of orders 
+                    li 
+                        h1 #{order.id}
+                        ul 
+                            each item of order.products 
+                                li #{item.title} (#{item.orderItem.quantity})
+        else 
+            h1 Nothing there
