--- a/views/shop/product-list.pug
+++ b/views/shop/product-list.pug
@@ -15,7 +15,7 @@ block content
                         h2.product__price #{product.price}
                         p.product__description #{product.description}
                     .card__actions 
-                        a(href=`/products/${product.id}`).btn Details 
+                        a(href=`/products/${product._id}`).btn Details 
                         form(action="/cart",method="POST")
                             button(type="submit").btn addToCart
                             input(type="hidden",name="productId",value=product.id)
